<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/root_layout"
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent">

   <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      style="@style/MyToolbarStyle" />

   <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/toolbar">

      <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <com.fantomsoftware.groupbudget.cmp.CmpInputText
            android:id="@+id/cmp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:resid_icon="@drawable/ic_translate_black_24dp"
            app:resid_label="@string/input_label_budget_name" />

         <com.fantomsoftware.groupbudget.cmp.CmpInputText
            android:id="@+id/cmp_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:resid_icon="@drawable/ic_attach_money_black_24dp"
            app:resid_label="@string/input_label_budget_default_currency" />

         <com.fantomsoftware.groupbudget.cmp.CmpInputText
            android:id="@+id/cmp_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:resid_icon="@drawable/ic_text_black_24dp"
            app:resid_label="@string/input_label_budget_comment" />

         <com.fantomsoftware.groupbudget.cmp.CmpUserList
            android:id="@+id/cmp_select_users"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:resid_icon="@drawable/ic_user_black_24dp"
            app:resid_label_btn="@string/input_label_user_pick_btn"
            app:resid_label="@string/input_label_select_users" />
      </LinearLayout>
   </ScrollView>
</RelativeLayout>